refactor after review: controller,naming,serviceTest