@@ -5,7 +5,6 @@ import school.faang.user_service.dto.UserDto;
 import school.faang.user_service.entity.User;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Mapper(componentModel = "spring")
@@ -14,7 +13,6 @@ public interface UserMapper {
     UserDto toDto(User user);
 
     default List<UserDto> entityStreamToDtoList(Stream<User> users) {
-        return users.map(this::toDto)
-                .collect(Collectors.toList());
+        return users.map(this::toDto).toList();
     }
 }
